# yapecs

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/_autosummary/: yapecs.core.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_autosummary/: yapecs.core.html
docs/html/_modules/: index.html
docs/html/_modules/yapecs/: core.html
docs/html/_sources/_autosummary/: yapecs.core.rst.txt
docs/html/_static/: documentation_options.js
test/: test.py  test_core.py
test/config/: cached_property.py  config.py  grid_search.py  included.py  includer.py  property.py
test/testmodule/config/: static.py
test/weather/: __init__.py
test/weather/config/: defaults.py  static.py
yapecs/: __init__.py  core.py
yapem/: __init__.py  core.py
