[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yapecs"
version = "0.5.0"
description = "Yet Another Python Experiment Configuration System (YAPECS)"
authors = [
  { name = "Max Morrison", email = "maxrmorrison@gmail.com" },
  { name = "Cameron Churchwell", email = "cameronchurchwell@icloud.com" },
]
readme = "README.md"
keywords = ["configuration", "config", "experiment", "manager"]
dependencies = ["filelock"]

[project.urls]
Homepage = "https://github.com/maxrmorrison/yapecs"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
